Cart: Finish Cart, View Order-Client

--- a/src/app/screen/cart/cart.component.html
+++ b/src/app/screen/cart/cart.component.html
@@ -63,7 +63,7 @@
                     </tbody>
                 </table>
                 <div class="make_payment mt-3">
-                    <button class="bg-orange-500  px-3 py-[4px] text-white w-full">TIẾN HÀNH THANH TOÁN</button>
+                    <button (click)="buttonOrder()" class="bg-orange-500  px-3 py-[4px] text-white w-full">TIẾN HÀNH THANH TOÁN</button>
                 </div>
             </div>
             <div class="magiamgia">
