--- a/src/app/screen/order-client/order-client.component.html
+++ b/src/app/screen/order-client/order-client.component.html
@@ -1,33 +1,34 @@
 <div class="content mt-3 container mx-auto pb-6">
     <div class="order md:flex">
         <div class="info_payment md:w-[65%]">
+        <form [formGroup]="formOrder" (submit)="addOrder()">
+
             <div class="title_payment flex">
                 <h2 class="text-gray-500 text-[18px] font-semibold">THÔNG TIN THANH TOÁN</h2>
             </div>
             <div class="form_payment">
-                <form action="">
                     <div class="mb-3 md:flex">
                         <div class="mb-3 w-full px-3 ">
                             <label for="" class="font-semibold">Họ và tên*</label>
-                            <input type="text"
+                            <input type="text" formControlName="name"
                                 class="py-1 shadow w-full border focus:outline-none focus:border-orange-500 transition-shadow">
                         </div>
                         <div class="mb-3 w-full px-3 ">
-                            <label for="" class="font-semibold">Số điện thoại*</label>
-                            <input type="text"
+                            <label for=""  class="font-semibold">Số điện thoại*</label>
+                            <input type="text" formControlName="phone"
                                 class="py-1 shadow w-full border focus:outline-none focus:border-orange-500 transition-shadow">
                         </div>
                     </div>
                     <div class="mb-3 w-full px-3 ">
                         <label for="" class="font-semibold">Email*</label>
-                        <input type="text"
+                        <input type="text"  formControlName="email"
                             class="py-1 shadow w-full border focus:outline-none focus:border-orange-500 transition-shadow">
                     </div>
                     <div class="md:flex mb-3">
                         <div class="mb-3 w-full px-3 ">
                             <label for="" class="font-semibold">Tỉnh/Thành Phố*</label>
-                            <select [(ngModel)]="formkey.keyWord" (change)="changeTown()"
-                                [ngModelOptions]="{standalone: true}"
+                            <select [(ngModel)]="formkey.keyWord" formControlName="province" (change)="changeTown()"
+                               
                                 class="bg-gray-50 py-1 shadow w-full border focus:outline-none focus:border-orange-500 transition-shadow">
                                 <option value="">--Chọn tỉnh/Thành Phố--</option>
                                 <ng-container *ngFor="let item of dataDivison">
@@ -37,8 +38,8 @@
                         </div>
                         <div class="mb-3 w-full px-3 ">
                             <label for="" class="font-semibold">Quận/Huyện*</label>
-                            <select [(ngModel)]="formkey.keyworddistric" (change)="changeDistrict()"
-                                [ngModelOptions]="{standalone: true}"
+                            <select [(ngModel)]="formkey.keyworddistric" formControlName="district" (change)="changeDistrict()"
+                               
                                 class="bg-gray-50 py-1 shadow w-full border focus:outline-none focus:border-orange-500 transition-shadow">
                                 <option value="">--Chọn Quận/Huyện--</option>
                                 <ng-container *ngFor="let item of dataTown">
@@ -48,31 +49,32 @@
                         </div>
                         <div class="mb-3 w-full px-3 ">
                             <label for="" class="font-semibold">Xã/Phường*</label>
-                            <select name="" id=""
+                            <select name="" id="" formControlName="wards"
                                 class="bg-gray-50 py-1 shadow w-full border focus:outline-none focus:border-orange-500 transition-shadow">
                                 <option value="">--Chọn Xã/Phường--</option>
                                 <ng-container *ngFor="let item of dataDistrict">
-                                    <option value="">{{item.name}}</option>
+                                    <option value="{{item.code}}">{{item.name}}</option>
                                 </ng-container>
                             </select>
                         </div>
                     </div>
                     <div class="mb-3 w-full px-3 ">
                         <label for="" class="font-semibold">Địa chỉ cụ thể*</label>
-                        <input type="text"
+                        <input type="text" formControlName="address"
                             class="py-1 shadow w-full border focus:outline-none focus:border-orange-500 transition-shadow">
                     </div>
-                </form>
             </div>
             <div class="additional">
                 <div class="title_additional">
                     <h2 class="text-gray-500 text-[18px] font-semibold">THÔNG TIN BỔ SUNG ?</h2>
                 </div>
                 <div class="px-3">
-                    <textarea class="shadow w-full border focus:outline-none focus:border-orange-500 transition-shadow"
+                    <textarea formControlName="additional" class="shadow w-full border focus:outline-none focus:border-orange-500 transition-shadow"
                         id="" cols="30" rows="10"></textarea>
                 </div>
             </div>
+        </form>
+
         </div>
         <div class="youroder md:w-[35%]">
             <div class="title_order">
@@ -94,12 +96,12 @@
                                 </div>
                                 <div class="px-3">
                                     <p class="font-semibold">{{item.name}} x {{item.quantity}} </p>
-                                    <span class="text-[15px] font-normal">{{item.size_name}}</span>
-                                    <p class="text-[15px] font-normal"> {{item.topping_name}}</p>
+                                    <span class="text-[15px] font-normal">Size: {{item.size_name}}</span>
+                                    <p class="text-[15px] font-normal">Topping: {{item.topping_name == '' ? 'Không chọn' : item.topping_name}}</p>
                                 </div>
                             </td>
                             <td>
-                                <p class="font-semibold">{{item.price |currency: "VND"}}</p>
+                                <p class="font-semibold">{{item.sumprice |currency: "VND"}}</p>
                             </td>
                         </tr>
                         <tr>
@@ -126,7 +128,7 @@
                         </tr>
                     </tbody>                
                 </table>
-                <button class="bg-orange-500 text-white w-full px-2 py-1  mt-3">Thanh Toán Ngay</button>
+                <button class="bg-orange-500 text-white w-full px-2 py-1  mt-3" (click)="addOrder()">Thanh Toán Ngay</button>
             </div>
         </div>
     </div>
