--- a/src/app/screen/admin/order-details/order-details.component.html
+++ b/src/app/screen/admin/order-details/order-details.component.html
@@ -5,7 +5,7 @@
                 <p class="font-light text-[20px] ml-3 pt-3">Đơn Hàng | Chi tiết đơn hàng</p>
             </div>
             <div class="mt-3">
-                <a routerLink="/admin/order"
+                <a routerLink="/admin/donhang"
                     class="bg-blue-600 rounded px-3 py-2 mr-3 pb-3 cursor-pointer hover:bg-blue-800 duration-300 text-white text-[14px]">Danh
                     sách đơn hàng</a>
             </div>
@@ -14,14 +14,22 @@
             <div>
                 <div class="details_order border m-3 bg-white rounded p-3 ">
                     <div class="confirm_order pb-3">
-                        <button (click)="changeStatus(daxacnhan)" class="bg-blue-600 rounded px-2 hover:bg-blue-800 duration-300 py-1 mr-2 mt-2 text-white">Đã xác nhận</button>
-                        <button (click)="changeStatus(danggiaohang)" class="bg-blue-600 rounded px-2 hover:bg-blue-800 duration-300 py-1 mr-2 mt-2 text-white">Đang giao hàng</button>
-                        <button (click)="changeStatus(dagiaohang)" class="bg-blue-600 rounded px-2 hover:bg-blue-800 duration-300 py-1 mr-2 mt-2 text-white">Đã giao hàng</button>
-                        <button (click)="changeStatus(dahuy)" class="bg-blue-600 rounded px-2 hover:bg-blue-800 duration-300 py-1 mr-2 mt-2 text-white">Đã hủy</button>
+                        <ng-container *ngIf="status==1">
+                            <button (click)="changeStatus(daxacnhan)" class="bg-blue-600 rounded px-2 hover:bg-blue-800 duration-300 py-1 mr-2 mt-2 text-white">Đã xác nhận</button>
+                        </ng-container>
+                        <ng-container *ngIf="status==2">
+                            <button (click)="changeStatus(danggiaohang)" class="bg-blue-600 rounded px-2 hover:bg-blue-800 duration-300 py-1 mr-2 mt-2 text-white">Đang giao hàng</button>
+                        </ng-container>
+                        <ng-container *ngIf="status==3">
+                            <button (click)="changeStatus(dagiaohang)" class="bg-blue-600 rounded px-2 hover:bg-blue-800 duration-300 py-1 mr-2 mt-2 text-white">Đã giao hàng</button>
+                        </ng-container>
+                        <ng-container *ngIf="status !==5 &&status !==4">
+                            <button (click)="changeStatus(dahuy)" class="bg-blue-600 rounded px-2 hover:bg-blue-800 duration-300 py-1 mr-2 mt-2 text-white">Đã hủy</button>
+                        </ng-container>
                     </div>
                     <div class="nofication">
                     <p>
-                        Đơn hàng đã đặt lúc <b>{{dataInfo.created_at|date:'mediumTime'}}  phút ngày {{dataInfo.created_at|date:'shortDate'}} </b> Hiện tại là:<b>{{dataInfo.status|shipping}}</b>
+                        Đơn hàng đã đặt lúc <b>{{created_at|date:'mediumTime'}}  phút ngày {{created_at|date:'shortDate'}} </b> Hiện tại là:<b>{{status|shipping}}</b>
                     </p>
                     </div>
                     <div class="main_orderdt ">
