--- a/src/app/screen/homelayout/homelayout.component.html
+++ b/src/app/screen/homelayout/homelayout.component.html
@@ -1,4 +1,7 @@
-<div >
+<div>
+    <div class="loading " id="loading" >
+        <div class="loading">Loading&#8230;</div>
+    </div>
     <app-header></app-header>
    <main>
     <router-outlet></router-outlet>
