--- a/src/app/screen/product/product.component.html
+++ b/src/app/screen/product/product.component.html
@@ -66,7 +66,7 @@
                         <span class="font-bold">{{30000| currency: "VND"}}</span>
                     </div>
                 </div>
-                <div class="menu_favorite_product md:flex  md:justify-between w-5/6 mt-3 border-b-2 pb-3">
+                <div  class="menu_favorite_product md:flex  md:justify-between w-5/6 mt-3 border-b-2 pb-3">
                     <div class="img_favorite_product">
                     <img src="https://tocotocotea.com/wp-content/uploads/2022/04/tra%CC%80-xoa%CC%80i-bu%CC%9Bo%CC%9B%CC%89i-ho%CC%82%CC%80ng-kem-pho%CC%82-mai.png" class="w-14" alt="">
                     </div>
@@ -95,11 +95,11 @@
          </div>
         <div class="product md:grid md:grid-cols-4 md:gap-8 items-center">
             <ng-container *ngFor="let item of dataProduct">
-                <div class="product_milk mx-4 border border-gray-200 ">
+                <div  class="product_milk mx-4 border border-gray-200 ">
                     <div class="milk_img">
-                        <a routerLink="/sanpham/chitiet/{{item.link_sp}}"><img [src]="item.image" class="md:w-[262px] " alt=""></a>
+                        <a (click)="loading()" routerLink="/sanpham/chitiet/{{item.link_sp}}"><img [src]="item.image" class="md:w-[262px] " alt=""></a>
                     </div>
-                    <div class="milk_text text-center bg-gray-100 py-4 ">
+                    <div  class="milk_text text-center bg-gray-100 py-4 ">
                         <p class="font-semibold">{{item.name}}</p>
                         <p>{{item.price| currency: "VND"}}</p>
                         <button class=" bg-orange-300 px-4 py-1 mt-3 hover:outline hover:outline-offset-1 hover:outline-orange-300 hover:bg-white translate-all">ĐẶT HÀNG</button>
